--- a/src/pages/image.css
+++ b/src/pages/image.css
@@ -1,9 +1,13 @@
 .canvas-container{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin-bottom: 100px;
   margin : 10px;
   gap:10px;
+}
+.canvas-container canvas{
+  width:300px;
+  height:300px;
 }
 .button-container{
   display: flex;
