--- a/src/pages/image.css
+++ b/src/pages/image.css
@@ -4,10 +4,15 @@
   margin-bottom: 100px;
   margin : 10px;
   gap:10px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .canvas-container canvas{
   width:300px;
   height:300px;
+  transition: opacity 0.3s ease;
 }
 .button-container{
   display: flex;
